start on implementing Recursive repeat step optimization, so far the pattern is recognized and a RecursiveRepeatStepConfig object added to SchemaTableTree